# wheels

.github/workflows/: openbabel-wheel.yaml
openbabel-wheel/: CMakeLists.txt  README.md  patch.txt  pyproject.toml
openbabel-wheel/src/openbabel_wheel/: cli.py
