[tool.poetry]
version = "0.0.1"
name = "openbabel-wheel"
description = ""
authors = ["Marc Helbling <marc.helbling@aqemia.com>"]
readme = "README.md"
package-mode = true


[build-system]
requires = [
    "scikit-build-core>=0.3.0",
    "swig"
]
build-backend = "scikit_build_core.build"

[project]
name = "openbabel-wheel"
version = "0.0.1"
description = "An unofficial repository to distribute pre-built OpenBabel binaries with Python bindings."
authors = [
  {name = "Marc Helbling", email = "marc.helbling@aqemia.com"},
  {name = "Noel O'Boyle", email = "openbabel-discuss@lists.sourceforge.net"},
]
readme = "README.md"
requires-python = ">=3.11,<3.12"

[project.scripts]
obabel = "openbabel_wheel.cli:obabel"

[tool.scikit-build]
minimum-version = "0.10.0"
wheel.install-dir = "openbabel"
wheel.exclude = ["**.cmake", "**/include/**", "**/share/man/**"]

[tool.scikit-build.cmake.define]
OBABEL_VERSION = "f495cc6"
CMAKE_BUILD_TYPE = "Release"
ENABLE_TESTS = "OFF"
WITH_INCHI = "ON"
PYTHON_BINDINGS = "ON"
RUN_SWIG = "ON"
Python_ROOT_DIR = "/opt/python/cp311-cp311/"

[tool.cibuildwheel]
manylinux-x86_64-image = "marchelbling/manylinux2014_x86_64-dev:2ca4f69"
archs = ["x86_64"]
build = ["cp311-manylinux_x86_64"]
build-verbosity = 2
test-command = [
    'python -c "from openbabel import openbabel; from openbabel import pybel"',
    "obabel -:C -oxyz --gen3d",
]

[tool.cibuildwheel.linux]
before-all = [
    "yum install -y zip zlib-devel-1.2.7 eigen3-devel-3.3.7 libxml2-devel-2.9.1",
]

# see https://github.com/pypa/auditwheel/issues/285
repair-wheel-command = [
  "mkdir -p /tmp/unpacked",
  "cd /tmp/unpacked",
  "unzip {wheel} -d/tmp/unpacked",
  "sed -i '/__version__ = \".*\"/r /project/openbabel-wheel/patch.txt' /tmp/unpacked/openbabel/__init__.py",
  "zip -u {wheel} openbabel/__init__.py",
  "cd -",
  "export LD_LIBRARY_PATH=/tmp/unpacked/openbabel/lib:$LD_LIBRARY_PATH",
  "export PATH=/tmp/unpacked/openbabel/bin:$PATH",
  "auditwheel repair -w {dest_dir} {wheel}",
]
